# ferris

./: README.md
lab00/: blazingly_fast  blazingly_fast.rs
lab08/: starter.tar
ortalab/: Cargo.toml  autotest.tar  mark_request.txt  ortalab_test.sh
ortalab/fixtures/categorised/complex/: droll_joker_four_of_a_kind_flush.yml
ortalab/ortalab-fuzzer/: Cargo.toml
ortalab/ortalab-fuzzer/fuzzer_tests/: random_test_000.yml  random_test_001.yml  random_test_002.yml  random_test_003.yml  random_test_004.yml  random_test_005.yml  random_test_006.yml  random_test_007.yml  random_test_008.yml  random_test_009.yml  random_test_010.yml  random_test_011.yml  random_test_012.yml  random_test_013.yml  random_test_014.yml  random_test_015.yml  random_test_016.yml  random_test_017.yml  random_test_018.yml  random_test_019.yml  random_test_020.yml  random_test_021.yml  random_test_022.yml  random_test_023.yml  random_test_024.yml  random_test_025.yml  random_test_026.yml  random_test_027.yml  random_test_028.yml  random_test_029.yml  random_test_030.yml  random_test_031.yml  random_test_032.yml  random_test_033.yml  random_test_034.yml  random_test_035.yml  random_test_036.yml  random_test_037.yml  random_test_038.yml  random_test_039.yml  (+27 more)
ortalab/ortalab-fuzzer/src/: main.rs
ortalab/src/: debug.rs  errors.rs  game.rs  main.rs  modifiers.rs  poker.rs
ortalab/src/jokers/: basic.rs  complex.rs  medium.rs  mod.rs
ortalab/tests/: five_of_a_card.yml  fourfingershortcut.yml  shortcut2gaps.yml  simple_blueprint.output  simple_blueprint.yml
rsheet/: debug_log.txt  expectedoutput.txt  (+2 more)
(+46 files in other folders)
