[package]
name = "ortalab"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
enum-iterator = "2.1.0"
indexmap = "2.8.0"
itertools = "0.14.0"
ortalib = "1.1.0"
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
